log
Thu Apr  7 15:30:47 UTC 2022: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
054dec3
Sat, 09 Apr 2022 19:34:50: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
cf4ed0c
Sat, 09 Apr 2022 19:36:34: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
bac8401
Sat, 09 Apr 2022 19:36:48: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6ae4906
Sat, 09 Apr 2022 19:37:07: 
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2e741c9
Sat, 09 Apr 2022 19:43:09: 
 tests:  0|6
total_score: 0/70
a73a79a
Sat, 09 Apr 2022 19:57:53: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
e4312f5
Sat, 09 Apr 2022 20:06:53: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:57:19: error: assignment to 'Pair **' from incompatible pointer type 'Pair *' [-Werror=incompatible-pointer-types]
   57 |   newMap->buckets = createPair(NULL, NULL);
      |                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
f28a62c
Sat, 09 Apr 2022 20:07:17: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:57:22: error: expected ';' before 'return'
   57 |   newMap->buckets = 0
      |                      ^
      |                      ;
   58 |   return newMap;
      |   ~~~~~~              
hashmap.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
49de032
Sat, 09 Apr 2022 20:07:23: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
548aab3
Sat, 09 Apr 2022 20:10:54: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function 'createPair':
hashmap.c:20:18: error: initialization of 'Pair *' from incompatible pointer type 'Pair **' [-Werror=incompatible-pointer-types]
   20 |     Pair * new = (Pair **)malloc(sizeof(Pair));
      |                  ^
hashmap.c:23:12: error: returning 'Pair *' from a function with incompatible return type 'Pair **' [-Werror=incompatible-pointer-types]
   23 |     return new;
      |            ^~~
test.c: In function 'initializeMap':
test.c:52:32: error: assignment to 'Pair *' from incompatible pointer type 'Pair **' [-Werror=incompatible-pointer-types]
   52 |         map->buckets[hashs[i]] =
      |                                ^
test.c: In function 'search_test2':
test.c:259:20: error: assignment to 'Pair *' from incompatible pointer type 'Pair **' [-Werror=incompatible-pointer-types]
  259 |     map->buckets[9]=createPair(_strdup("key"),_strdup("value"));
      |                    ^
test.c: In function 'erase_test2':
test.c:317:20: error: assignment to 'Pair *' from incompatible pointer type 'Pair **' [-Werror=incompatible-pointer-types]
  317 |     map->buckets[9]=createPair(_strdup("key"),_strdup("value"));
      |                    ^
cc1.exe: all warnings being treated as errors
Compilation failed
80e73f6
